--- a/src/styles/partials/_inventory.scss
+++ b/src/styles/partials/_inventory.scss
@@ -1,4 +1,4 @@
-form {
+.form--inventory {
   display: flex;
   flex-wrap: wrap;
   margin: 40px auto 0;
@@ -8,6 +8,11 @@ form input {
   @include secondaryFont(18);
   padding: 5px;
   border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.inventoryContainer {
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .itemName {
@@ -22,17 +27,16 @@ form input {
 
 .itemDescription,
 .itemImage {
-  width:100%;
+  width: 100%;
   border-top: none;
 }
-
+  
 .inventoryItem {
   padding-top: 10px;
-  margin: 40px 0;
+  margin-top: 40px;
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .inventoryItem p {
   overflow: scroll;
 }
-
