--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,5 +4,5 @@
 @import "./partials/header";
 @import "./partials/home";
 @import "./partials/inventory";
-@import "./partials/products";
-@import "./partials/cart";
+@import "./partials/pos";
+
