--- a/src/styles/partials/_general.scss
+++ b/src/styles/partials/_general.scss
@@ -50,3 +50,13 @@ p {
   @include secondaryFont(18);
   margin: 0;
 }
+
+@media (max-width: 730px) {
+  .wrapper {
+    width: 90%;
+  }
+  .heading {
+    @include primaryFont(30);
+    color: $white-shade;
+  }
+}
