--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -16,7 +16,7 @@ header ul {
 
 header li {
   list-style: none;
-  display: inline-block;
+  display: inline;
 }
 
 header a {
@@ -27,4 +27,11 @@ header a {
 
 header h1 a {
   padding: 0;
+}
+
+@media (max-width: 730px) {
+  .headerContainer {
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
 }
