--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -3,4 +3,20 @@
               url("../assets/samuel-zeller-118195-unsplash.jpg") center;
   background-size: cover;
   height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.form--login {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  width: 90%;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 40px;
+  input {
+    margin-bottom: 20px;
+  }
+}
+
