--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -29,6 +29,14 @@ header h1 a {
   padding: 0;
 }
 
+.logoContainer {
+  display: flex;
+  .logo {
+    width: 50px;
+    margin-right: 10px;
+  }
+}
+
 @media (max-width: 730px) {
   .headerContainer {
     flex-direction: column;
